# stremio-core-validator

./: .gitignore  .npmignore  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: build.yml  publish.yml
scripts/: build.sh
src/: lib.rs
tests/: meta.spec.js
