[package]
name = "stremio-core-validator"
version = "2.0.0"
authors = ["Smart Code OOD"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
lto = true

[dependencies]
stremio-core = { git = "https://github.com/Stremio/stremio-core", branch = "development" }
wasm-bindgen = { version = "=0.2.78", features = ["serde-serialize"] }
js-sys = "0.3.*"
serde = "1.0.*"
serde_json = "1.0.*"
serde_path_to_error = "0.1.*"
